--- a/todo
+++ b/todo
@@ -3,6 +3,7 @@ Smith don't work
 boss 2 fewer evokers (bug?); add ghasts?
 reset boat?
 fire/enchanted sword: use /data instead of /give?
+fireball staff: /data for precise direction
 
 Resourcepack:
 - remove spruce stairs=sideway nether bricks (of turn of relevant face culling)
